[DEVELOP][PRECOMIT] Add interactif mode for todo

--- a/README
+++ b/README
@@ -1,1 +1,31 @@
-check before commit
+================================================================================
+                                     README
+================================================================================
+
+
+
+================================= GENERAL INFO =================================
+
+
+  Contributors: forget_c
+  License: GNU General Public License v3.0
+  Version: v1.0
+
+
+===================================== GOAL =====================================
+
+
+  ##FIXME##
+
+
+===================================== USAGE ====================================
+
+  Usage: ./pre-commit [-ut] [-c] [-a] [-r] [-t file] [-init file]
+
+
+=================================== CHANGELOG ==================================
+
+
+  ##FIXME##
+
+
