[UAT][README] Make public repository and add suggestion

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
                                      README
 ================================================================================
 
-
+ You can contact if you have some suggestion or bug to report.
 
 ================================= GENERAL INFO =================================
 
